src/objects/AccountMergeRequest__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_Are_Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the merge request was successful, and the accounts have been merged.</inlineHelpText>
        <label>Accounts Are Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_OneSFID__c</fullName>
        <label>Child OneSFID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_OneSFID__c</fullName>
        <label>Master OneSFID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Failure_Reason__c</fullName>
        <label>Merge Failure Reason</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merged_Child_Objects__c</fullName>
        <description>A list of all the objects that were assigned to the child account before the merge. After the merge has been completed, the child objects will have been assigned to the parent account.</description>
        <label>Merged Child Objects</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Merge Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Master_OneSFID__c</columns>
        <columns>Child_OneSFID__c</columns>
        <columns>Accounts_Are_Merged__c</columns>
        <columns>Merge_Failure_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Merge_Failure_Reason__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Master_OneSFID__c</columns>
        <columns>Child_OneSFID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Accounts_Are_Merged__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Failed_merge_requests_no_action</fullName>
        <columns>NAME</columns>
        <columns>Merge_Failure_Reason__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Master_OneSFID__c</columns>
        <columns>Child_OneSFID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Accounts_Are_Merged__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accounts_Are_Merged__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Failed merge requests</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AMR-{000000}</displayFormat>
        <label>Account Merge Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Merge Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>